--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,15 @@
-<app-triplet-visualization></app-triplet-visualization>
-<router-outlet/>
+<p-menubar [model]="menuItems" class="navbar"></p-menubar>
+
+<p-fluid>
+  <div class="grid max-h-full">
+    <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 60vh;">
+      <div class="text-center text-8xl mt-5">
+        Lorem Dolorem<br> Amet it <br> Dolor Sit Consectetur
+      </div>
+    </div>
+    <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+      <p-button label="Tripla a partire da singolo ASes" icon="pi pi-play" severity="contrast" class="mr-8"></p-button>
+      <p-button label="Seconda Visualizzazione" icon="pi pi-play" severity="contrast" class="ml-8"></p-button>
+    </div>
+  </div>
+</p-fluid>
