Applying new logic to the triplet page

--- a/src/app/triplet-visualization/triplet-visualization.html
+++ b/src/app/triplet-visualization/triplet-visualization.html
@@ -1,2 +1,7 @@
+<p>la pagina delle triplette funziona!</p>
 
-
+<p-fieldset legend="Header" [toggleable]="true" [collapsed]="isCollapsed">
+  <p>
+    Lorem ipsum dolor sit amet...
+  </p>
+</p-fieldset>
