implemented median method to minimize crossing between arcs

--- a/src/app/homepage/homepage.html
+++ b/src/app/homepage/homepage.html
@@ -2,7 +2,7 @@
   <div class="grid max-h-full">
     <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 60vh;">
       <div class="text-center text-8xl mt-5">
-        Lorem Dolorem<br> Amet it <br> Dolor Sit Consectetur
+        SpiderGraph<br> Amet it <br> Dolor Sit Consectetur
       </div>
     </div>
     <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 10vh;">
