--- a/src/app/homepage/homepage.html
+++ b/src/app/homepage/homepage.html
@@ -1,14 +1,18 @@
 <p-fluid>
-  <div class="grid max-h-full">
-    <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 60vh;">
-      <div class="text-center text-8xl mt-5">
-        SpiderGraph<br> Amet it <br> Dolor Sit Consectetur
-      </div>
+  <div class="grid align-content-center flex max-h-full" style="margin-top: 7rem">
+    <div class="col-12 mt-8" style="display: flex; justify-content: center; align-items: center; ">
+      <span class="title text-center text-8xl">
+        SpiderGraph
+      </span>
     </div>
-    <div class="col-12" style="display: flex; justify-content: center; align-items: center; height: 10vh;">
-      <p-button label="Tripla a partire da singolo ASes" icon="pi pi-play" routerLink="/tripletsFromASes"
-                severity="contrast" class="mr-8"></p-button>
-      <p-button label="Seconda Visualizzazione" icon="pi pi-play" severity="contrast" class="ml-8"></p-button>
+    <div class="col-12" style=" justify-content: center; align-items: center;">
+      <p class="text-center">
+        Visualization of the propagation graph of Announcements for Autonomous Systems in the Internet
+      </p>
+    </div>
+    <div class="col-12 flex justify-content-center align-items-center">
+      <p-button label="Inizia ora!" icon="pi pi-play" routerLink="/tripletsFromASes"
+                rounded class="custom-btn-bg"></p-button>
     </div>
   </div>
 </p-fluid>
